fix blurred dialog

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -614,7 +614,7 @@ label {
 
 .session-modal {
   z-index: 150;
-  position: fixed;
+  position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
